--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,12 @@
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+th, td {
+  padding: 8px;
+  text-align: left;
+  border: 1px solid #ddd;
+}
 /* CSS for entire body */
 body {
   font-family: 'Hack Nerd Font', sans-serif;
