--- a/styles/styles.css
+++ b/styles/styles.css
@@ -27,7 +27,15 @@ body {
 .nav-item {
   flex: 1;
 }
-
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
+th, td {
+  padding: 8px;
+  text-align: left;
+  border: 1px solid #ddd;
+}
 .nav-item a {
   background-repeat: repeat-y;
   display: block;
