updates to stuff

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,6 +5,7 @@ body {
 }
 .nav-tabs .nav-link {
   color: #f8f9fa;
+  border: 1px solid transparent; 
 }
 .nav-tabs .nav-link.active {
   background-color: #343a40;
